@@ -1,6 +1,9 @@
 # $Id$
 
-2007-04-141	Konstantin V. Arkhipov
+2007-04-14	Konstantin V. Arkhipov
+
+	* core/OSQL/DBTable.class.php: now respect's column size during diff,
+	if any.
 
 	* main/Base/CompositeLightMetaProperty.class.php: replaced by
 	InnerMetaProperty because of former unnecessary complexity.
